
[TestPrintResultAllowsOnlyUnstableModifications - 1]
╭────────┬───────────┬───────┬──────────────────┬─────────────────────────╮
│ CHANGE │ STABILITY │ CHECK │ SNAPSHOT         │ CONTENT (SIZE · SHA256) │
├────────┼───────────┼───────┼──────────────────┼─────────────────────────┤
│ M      │ unstable  │ allow │ probabilistic.sk │ old 12 B · aaaaaaaaaaaa │
│        │           │       │                  │ new 12 B · bbbbbbbbbbbb │
╰────────┴───────────┴───────┴──────────────────┴─────────────────────────╯
Summary: 0 added · 1 modified (1 unstable) · 0 deleted
! Snapshot set and stable contents are unchanged; 1 unstable content modification is allowed.

---

[TestPrintResultIncludesDetailedFileChanges - 1]
╭────────┬───────────┬───────┬─────────────┬─────────────────────────╮
│ CHANGE │ STABILITY │ CHECK │ SNAPSHOT    │ CONTENT (SIZE · SHA256) │
├────────┼───────────┼───────┼─────────────┼─────────────────────────┤
│ A      │ stable    │ block │ added.sk    │ new 16 B · bbbbbbbbbbbb │
│ M      │ unstable  │ allow │ modified.sk │ old 12 B · aaaaaaaaaaaa │
│        │           │       │             │ new 16 B · bbbbbbbbbbbb │
│ D      │ stable    │ block │ deleted.sk  │ old 12 B · aaaaaaaaaaaa │
╰────────┴───────────┴───────┴─────────────┴─────────────────────────╯
Summary: 1 added · 1 modified (1 unstable) · 1 deleted
✗ serialization_test_data/go_generated_files has 2 blocking changes.

---

[TestPrintUpdateResultReportsSkippedChanges - 1]
╭────────┬───────────┬───────┬──────────────────┬─────────────────────────╮
│ CHANGE │ STABILITY │ CHECK │ SNAPSHOT         │ CONTENT (SIZE · SHA256) │
├────────┼───────────┼───────┼──────────────────┼─────────────────────────┤
│ M      │ unstable  │ allow │ probabilistic.sk │ old 12 B · aaaaaaaaaaaa │
│        │           │       │                  │ new 12 B · bbbbbbbbbbbb │
╰────────┴───────────┴───────┴──────────────────┴─────────────────────────╯
Summary: 0 added · 1 modified (1 unstable) · 0 deleted
Source revision: keeping a (generated b)
✓ Skipped snapshots: snapshot set and stable contents are unchanged; kept existing snapshots and source revision.

---

[TestPrintUpdateResultWithIdenticalSnapshots/adopt_revision - 1]
Source revision: a -> b
✓ Updated source revision for snapshots; snapshot contents are unchanged.

---

[TestPrintUpdateResultWithIdenticalSnapshots/retain_revision - 1]
Source revision: keeping a (generated b)
✓ Skipped snapshots: snapshot set and stable contents are unchanged; kept existing snapshots and source revision.

---
